force-app/main/default/objects/Activity/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Lead for Appointment Booking application. This is field is created because in salesforce when WhoId in events is Lead, whatId has to be empty.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>