force-app/main/default/objects/Activity/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Lead Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>