force-app/main/default/objects/Activity/fields/My_extended_team_s_tasks__c.field-meta.xml
<CustomField>
    <fullName>My_extended_team_s_tasks__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To fetch tasks associated with Cases owned by Extended Team</description>
    <formula>OR( Case__r.My_extended_team_s_cases__c,Owner:User.ManagerId = $User.Id,Owner:User.Manager.ManagerId =$User.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My extended team&apos;s tasks</label>
    <type>Checkbox</type>
</CustomField>