force-app/main/default/objects/Activity/fields/My_Region_Flag__c.field-meta.xml
<CustomField>
    <fullName>My_Region_Flag__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>If task is included in User&apos;s Region</description>
    <formula>AND(
OR(
$User.Area_Code__c == Owner:User.Area_Code__c,
AND(
CONTAINS($UserRole.Name, &apos;Head&apos;),
$User.State_Code__c == Owner:User.State_Code__c
),
CONTAINS($UserRole.Name, &apos;General Manager&apos;)
),
TEXT($User.Commercial_Segment__c) == TEXT(Owner:User.Commercial_Segment__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Region Flag</label>
    <type>Checkbox</type>
</CustomField>