force-app/main/default/objects/Activity/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Final on hold reason to be populated based on On Hold reason - Internal or External</description>
    <formula>IF(
NOT(ISBLANK(TEXT(IDR_Pend_Reason__c))),
TEXT(IDR_Pend_Reason__c),
TEXT(On_Hold_Reason_Internal__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hold Reason</label>
    <type>Text</type>
</CustomField>