force-app/main/default/objects/Activity/fields/On_Hold_Reason_Internal__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason_Internal__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>On Hold Reason to be used when case is on hold with Internal (ANZ) Party</description>
    <label>On Hold Reason - Internal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Internal_or_External_Party__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting information to be provided</fullName>
            </value>
            <value>
                <fullName>Awaiting allocation to ACFA case manager</fullName>
            </value>
            <value>
                <fullName>Awaiting determination</fullName>
            </value>
            <value>
                <fullName>Awaiting recommendation or preliminary view</fullName>
            </value>
            <value>
                <fullName>Other (please provide detail in comments)</fullName>
            </value>
            <value>
                <fullName>Awaiting response on an offer made to customer</fullName>
            </value>
            <value>
                <fullName>Awaiting approval for proposed resolution</fullName>
            </value>
            <value>
                <fullName>Awaiting implementation of agreed outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>