force-app/main/default/objects/Activity/fields/Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Reason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Action outcome for Response Log on Leads.</description>
    <label>Outcome Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointment booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>