force-app/main/default/objects/Activity/fields/PEGA_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>PEGA_Case_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Pega case number that is required for sending email to customer on dispute closure.</description>
    <formula>Case__r.External_Case_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PEGA Case Id</label>
    <type>Text</type>
</CustomField>