force-app/main/default/objects/Activity/fields/PEGA_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>PEGA_Case_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Pega SD</complianceGroup>
    <description>To Display the last PEGA SMARTS Status for Resolved</description>
    <label>PEGA Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>