force-app/main/default/objects/Activity/fields/Pega_CDH_Id__c.field-meta.xml
<CustomField>
    <fullName>Pega_CDH_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique External Id from Pega CDH event</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Pega CDH Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>