force-app/main/default/objects/Activity/fields/Product_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Product_Manufacturer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Product Manufacturer for External Party Type - Product Manufactrer</description>
    <label>Product Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Pended_To__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zurich</fullName>
            </value>
            <value>
                <fullName>IOOF</fullName>
            </value>
            <value>
                <fullName>QBE</fullName>
            </value>
            <value>
                <fullName>CGU</fullName>
            </value>
            <value>
                <fullName>CMC Markets</fullName>
            </value>
            <value>
                <fullName>Allianz</fullName>
            </value>
            <value>
                <fullName>Net Wealth</fullName>
            </value>
            <value>
                <fullName>Worldline</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>