force-app/main/default/objects/Activity/fields/PSI_or_DSI__c.field-meta.xml
<CustomField>
    <fullName>PSI_or_DSI__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Possible Systemic Issue or Definite Systemic Issue?</description>
    <label>PSI or DSI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>DSI</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>