force-app/main/default/objects/Activity/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>Populates the Queue Name when Task Owner is Queue. Task Ownership changes when queue member accepts the task, hence stamping the queue name to get that visibility</description>
    <label>Queue</label>
    <length>75</length>
    <type>Text</type>
</CustomField>