force-app/main/default/objects/Activity/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Response Status Value of Lead Response for CCRM Leads.</description>
    <label>Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>