force-app/main/default/objects/Activity/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to link Selected Response Type data.</description>
    <label>Response Type</label>
    <referenceTo>Response_Type__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>