force-app/main/default/objects/Activity/fields/SI_Other_Tribe_BU__c.field-meta.xml
<CustomField>
    <fullName>SI_Other_Tribe_BU__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Capture Other tribe and other is selected as Tribe on SI task</description>
    <label>Other Tribe/BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>