force-app/main/default/objects/Activity/fields/SI_Tribe_BU__c.field-meta.xml
<CustomField>
    <fullName>SI_Tribe_BU__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To capture the Business Unit for SI task</description>
    <label>Tribe/BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMU &amp; Collections</fullName>
                <isActive>false</isActive>
                <label>AMU &amp; Collections</label>
            </value>
            <value>
                <fullName>ANZ Private</fullName>
            </value>
            <value>
                <fullName>ANZx</fullName>
            </value>
            <value>
                <fullName>APRA Home Loans</fullName>
                <isActive>false</isActive>
                <label>APRA Home Loans</label>
            </value>
            <value>
                <fullName>APRA Remediation Tribe (ART)</fullName>
                <isActive>false</isActive>
                <label>APRA Remediation Tribe (ART)</label>
            </value>
            <value>
                <fullName>Australian Branch Network</fullName>
            </value>
            <value>
                <fullName>Banker Digital Experience (BDX)</fullName>
                <isActive>false</isActive>
                <label>Banker Digital Experience (BDX)</label>
            </value>
            <value>
                <fullName>Banker Digital Experience (System)</fullName>
            </value>
            <value>
                <fullName>Brand Strategy &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Breach Reporting</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Business Execution</fullName>
                <isActive>false</isActive>
                <label>Business Execution</label>
            </value>
            <value>
                <fullName>Business Lending</fullName>
                <isActive>false</isActive>
                <label>Business Lending</label>
            </value>
            <value>
                <fullName>Business Lending Tribe</fullName>
                <isActive>false</isActive>
                <label>Business Lending Tribe</label>
            </value>
            <value>
                <fullName>Business Owners Engagement</fullName>
                <isActive>false</isActive>
                <label>Business Owners Engagement</label>
            </value>
            <value>
                <fullName>Business Owners Lighthouse</fullName>
                <isActive>false</isActive>
                <label>Business Owners Lighthouse</label>
            </value>
            <value>
                <fullName>Business Owners Portfolio</fullName>
                <isActive>false</isActive>
                <label>Business Owners Portfolio</label>
            </value>
            <value>
                <fullName>Business Platform Service (BPS)</fullName>
                <isActive>false</isActive>
                <label>Business Platform Service (BPS)</label>
            </value>
            <value>
                <fullName>Business Platform Services</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Commercial &amp; Consumer Cards and Personal Lending (CCPL) Tribe</fullName>
                <isActive>false</isActive>
                <label>Commercial &amp; Consumer Cards and Personal Lending (CCPL) Tribe</label>
            </value>
            <value>
                <fullName>Commercial Broker</fullName>
            </value>
            <value>
                <fullName>Commercial Credit Cards</fullName>
                <isActive>false</isActive>
                <label>Commercial Credit Cards</label>
            </value>
            <value>
                <fullName>Commercial Digital and Customer Experience</fullName>
            </value>
            <value>
                <fullName>Commercial Strategic Delivery</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Credit and Quality Governance</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
                <isActive>false</isActive>
                <label>Credit Cards</label>
            </value>
            <value>
                <fullName>Credit Cards &amp; Personal Lending</fullName>
            </value>
            <value>
                <fullName>Customer Cash Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>