force-app/main/default/objects/Activity/fields/Skip_Validations__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validations__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Accurate;Source_Salesforce</complianceGroup>
    <description>This field is to Skip Validation Rules when updating records through Apex.</description>
    <label>Skip Validations</label>
    <length>20</length>
    <type>Text</type>
</CustomField>