force-app/main/default/objects/Activity/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sub Status of the task if actioned.</description>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity identified - immediate</fullName>
            </value>
            <value>
                <fullName>Opportunity identified - long term</fullName>
            </value>
            <value>
                <fullName>Request to callback</fullName>
            </value>
            <value>
                <fullName>Referred to Classic</fullName>
            </value>
            <value>
                <fullName>Not contactable 1 attempt</fullName>
            </value>
            <value>
                <fullName>Not contactable 2 attempts</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>