force-app/main/default/objects/Activity/fields/Task_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Sub_Type__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Accurate;Source_Salesforce</complianceGroup>
    <description>Displays task sub type</description>
    <inlineHelpText>Only required if creating a task related to an AFCA Due Date</inlineHelpText>
    <label>Task Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reg response</fullName>
            </value>
            <value>
                <fullName>Information request</fullName>
            </value>
            <value>
                <fullName>TCC</fullName>
            </value>
            <value>
                <fullName>PA/PV/Recommendation</fullName>
            </value>
            <value>
                <fullName>Determination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>