force-app/main/default/objects/Activity/fields/TaskNumber__c.field-meta.xml
<CustomField>
    <fullName>TaskNumber__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Auto Number Field created for new task as part of Push To App Deliverab;e</description>
    <displayFormat>TK-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Task Number</label>
    <type>AutoNumber</type>
</CustomField>