force-app/main/default/objects/Activity/fields/Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Captures team manager of tasks assignee</description>
    <formula>Owner:User.Manager.FirstName + &apos; &apos; +  Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Manager</label>
    <type>Text</type>
</CustomField>