force-app/main/default/objects/Activity/fields/Voice_Call_SID__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call_SID__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Twilio;Privacy - Non Personal Information</complianceGroup>
    <description>Used to store the unique Twilio SID related to the particular voice call interaction being logged</description>
    <inlineHelpText>Unique Twilio SID related to the particular voice call interaction being logged</inlineHelpText>
    <label>Voice Call SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>